# room-surveillance

./: .gitignore  README.md  TODO.md
esp8266/ActivityMonitor/: ActivityInterface.pb.c  ActivityInterface.pb.h  ActivityMonitor.ino  activity_interface.pb.h
esp8266/activity_monitor/: activity_interface.pb.c  activity_interface.pb.h  activity_monitor.ino  protogen.sh
piserver/: ActivityInterface_pb2.py  arduino_server.c  intruder_server.py  test_server
piserver/src/: a.out  activity_interface.pb.h  run.sh
raspberry-cpp-server/: .gitignore  CMakeLists.txt  Makefile  rpicppserver.cbp  rpiserver
raspberry-cpp-server/proto/: CMakeLists.txt  activity_interface.pb.cc  activity_interface.pb.h  activity_interface.proto
raspberry-cpp-server/src/: esp_client.cc  esp_client.h  main.cc  utils.cc  utils.h
rpi-server/: .gitignore  rpiserver
rpi-server/src/: utils.cc  utils.h
test-go-server/: main.go
test-go-server/pb/: activity_interface.pb.go
