project(rpicppserver)
cmake_minimum_required(VERSION 2.8.9)
SET(CMAKE_CXX_FLAGS "-g -Wall -Werror -std=c++11")
INCLUDE(FindProtobuf)
FIND_PACKAGE(Protobuf REQUIRED)
ADD_SUBDIRECTORY(proto)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_EXECUTABLE(rpiserver src/main.cc)
MESSAGE( STATUS, "Protobuf lib is ${PROTOBUF_LIBRARY}")
MESSAGE( STATUS, "Protobuf libs is ${PROTOBUF_LIBRARIES}")
TARGET_LINK_LIBRARIES(rpiserver proto ${PROTOBUF_LIBRARIES})
