project(rpicppserver)
cmake_minimum_required(VERSION 2.8.9)
SET(CMAKE_CXX_FLAGS "-g -Wall -Werror -std=c++11")
INCLUDE(FindProtobuf)
set(raspicam_DIR "/usr/local/lib/cmake")
FIND_PACKAGE(Protobuf REQUIRED)
find_package(raspicam REQUIRED)
ADD_SUBDIRECTORY(proto)

file(GLOB SOURCES src/*.cc)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
ADD_EXECUTABLE(rpiserver ${SOURCES})
MESSAGE( STATUS, "Protobuf lib is ${PROTOBUF_LIBRARY}")
MESSAGE( STATUS, "Protobuf libs is ${PROTOBUF_LIBRARIES}")
TARGET_LINK_LIBRARIES(rpiserver proto ${PROTOBUF_LIBRARIES} ${raspicam_LIBS})
